1.2-16:
* Interrupts and Dispels modes now show the owner for pets.
* Added a crowd control (CC) breaks mode, with optional announce.
* Fixed a bug in Damage Taken mode.

1.2-15:
* Now using combat log event flags to determine if we are interested in actors. Should result in a slight performance increase.

1.2-14:
* Fixed title bar font changes affecting game fonts.
* Added an optional button opening the menu in the title bar.
* Added a subview to Damage - damaged mobs, showing who the player damaged.

1.2-13:
* Fixed missing translation for reports.
* New push to get an updated LibFail-1.0 that doesn't fail quite so bad.

1.2-12:
* Fixed "Only keep bosses" option, broken since a few releases.

1.2-11:
* Added tooltip positioning option.

1.2-10:
* Fixed empty segments (that are discarded) still being pointed to by Current after fight. 
* Fixed pets not being merged with owner for Enemy Damage Taken mode.

1.2-9:
* Added Healing recipient mode (shift-click from healing mode).
* Multiple subviews can now be reached from one view. Only healing mode has multiple subviews as of now.
* Fixed tooltip option; the on/off switch was inverted.

1.2-8
* Damage modes: now ignoring friendly fire.
* Absorbs mode: fix for not counting swing damage.
* Added a Hide in PVP option.
* Added healing spell details tooltip.
* Manually hiding windows (by clicking minimap button/LDB) should now hide the windows until clicked again.

1.2-7
* Added TPS to Threat mode. Optional, by default on.
* Added an option to not warn on threat when tanking.
* Threat mode now shows target as title.
* Fixed misses being reported as minimum hit in tooltip.

1.2-6
* Added an Absorbs mode. Note that this mode is not and can not be made to be accurate at this time.
* Fixed report function not giving enough lines.
* Fixed Failbot mode not showing enough lines.
* Moved LibFail-1.0 dependency to main addon (affects nolib and svn users).

1.2-5